--- a/components/footer.html
+++ b/components/footer.html
@@ -44,7 +44,7 @@
           </a>
           <a class="mbx-social-link" aria-label="Instagram" href="https://www.instagram.com/meauxbility/" target="_blank" rel="noopener noreferrer">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-              <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1112.324 0 6.162 6.162 0 01-12.324 0zM12 15.838a3.838 3.838 0 110-7.676 3.838 3.838 0 010 7.676zM18.406 5.594a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z"/>
+              <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1112.324 0 6.162 6.162 0 01-12.324 0zM12 15.838a3.838 3.838 0 110-7.676 3.838 3.838 0 010 7.676zM18.406 5.594a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z"/>
             </svg>
           </a>
         </div>
@@ -54,8 +54,8 @@
         </p>
         
         <div class="mbx-footer-cta">
-          <a class="mbx-btn mbx-btn-primary" href="/fred/impact.html">
-            Make an Impact
+          <a class="mbx-btn mbx-btn-primary" href="https://meauxbility.org/pages/donmichael-our-first-campaign">
+            DonMichael's Campaign
           </a>
           <button class="mbx-btn mbx-btn-outline" onclick="openDonateModal()">
             Donate Now
@@ -78,10 +78,10 @@
       <div class="mbx-footer-column">
         <h4>Resources</h4>
         <ul class="mbx-footer-links" role="list">
-          <li><a href="/fred/resources.html">Resource Library</a></li>
-          <li><a href="/fred/community.html">Community</a></li>
-          <li><a href="/fred/programs.html">Programs</a></li>
-          <li><a href="/fred/about.html">About Us</a></li>
+          <li><a href="https://meauxbility.org/pages/meauxbility-branding">Brand Guide</a></li>
+          <li><a href="https://meauxbility.org/pages/community">Community</a></li>
+          <li><a href="https://meauxbility.org/pages/news-media-features">Latest News</a></li>
+          <li><a href="https://meauxbility.org/pages/non-profit-information">501(c)(3) Info</a></li>
         </ul>
       </div>
 
@@ -89,10 +89,11 @@
       <div class="mbx-footer-column">
         <h4>Company</h4>
         <ul class="mbx-footer-links" role="list">
-          <li><a href="/fred/about.html">Our Mission</a></li>
-          <li><a href="/fred/connect.html">Contact</a></li>
-          <li><a href="/fred/impact.html">Impact</a></li>
-          <li><a href="/fred/connect.html">Get Involved</a></li>
+          <li><a href="https://meauxbility.org/pages/sam-primeaux">About Sam</a></li>
+          <li><a href="https://meauxbility.org/pages/team-meauxbility">Our Team</a></li>
+          <li><a href="https://meauxbility.org/pages/about-us">Our Mission</a></li>
+          <li><a href="https://meauxbility.org/pages/accessibility-partners">Partners</a></li>
+          <li><a href="https://meauxbility.org/pages/contact">Contact</a></li>
         </ul>
       </div>
 
@@ -100,10 +101,10 @@
       <div class="mbx-footer-column">
         <h4>Support</h4>
         <ul class="mbx-footer-links" role="list">
-          <li><a href="/fred/connect.html">Apply for Grant</a></li>
-          <li><a href="/fred/impact.html">Ways to Give</a></li>
-          <li><a href="/fred/connect.html">Volunteer</a></li>
-          <li><a href="/fred/connect.html">Partner</a></li>
+          <li><a href="https://meauxbility.org/pages/faq">FAQ</a></li>
+          <li><a href="https://meauxbility.org/pages/donate">Ways to Give</a></li>
+          <li><a href="https://meauxbility.org/pages/get-involved">Get Involved</a></li>
+          <li><a href="https://meauxbility.org/pages/apply-for-funding">Apply for Grant</a></li>
         </ul>
       </div>
     </div>
@@ -111,11 +112,11 @@
     <!-- Footer Bottom -->
     <div class="mbx-footer-bottom">
       <div class="mbx-footer-legal">
-        <a href="#privacy">Privacy Policy</a>
+        <a href="https://meauxbility.org/pages/data-sharing-opt-out">Privacy Policy</a>
         <span aria-hidden="true" style="color:rgba(255,255,255,0.3);">•</span>
-        <a href="#terms">Terms of Service</a>
+        <a href="https://meauxbility.org/pages/policies">Terms of Service</a>
         <span aria-hidden="true" style="color:rgba(255,255,255,0.3);">•</span>
-        <a href="#accessibility">Accessibility</a>
+        <a href="https://meauxbility.org/pages/accessibility">Accessibility</a>
       </div>
 
       <div class="mbx-footer-copyright">
